# PostgresFT

./: .gitignore  LICENSE  README.md
database/: README.md  database.json  fft.py  package-lock.json  package.json  pyproject.toml  seed_db.py  visualize.py
database/migrations/: 20240220133714-first-table.js
database/migrations/sqls/: 20240220133714-first-table-up.sql
functions/: README.md
functions/my_extension/: Cargo.toml
functions/my_extension/src/: lib.rs
