[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Cody Kilpatrick <Codykilpatrick1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.3"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
sqlalchemy = "^1.4.31"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
